--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "onsenui": "^2.10.10",
+    "reac": "0.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-onsenui": "^1.11.2"
